--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,10 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Junjie Hu
-email: junjieh@cs.cmu.edu
+title: >
+    Junjie Hu
+email: >
+    junjieh@cs.cmu.edu
 description: > # this means to ignore newlines until "url:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -36,8 +38,10 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: JunjieHu # your GitHub user name
-twitter_username: JunjieHu12  # your Twitter handle
+github_username: >
+    JunjieHu # your GitHub user name
+twitter_username: >
+    JunjieHu12  # your Twitter handle
 linkedin_username: # your LinkedIn user name
 scholar_userid: # your Google Scholar ID
 orcid_id: # your ORCID ID
