--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,6 @@ description: > # this means to ignore newlines until "url:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 
 url:  # the base hostname & protocol for your site
 baseurl: #/al-folio # the subpath of your site, e.g. /blog/
@@ -38,10 +36,10 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: >
-    JunjieHu # your GitHub user name
-twitter_username: >
-    JunjieHu12  # your Twitter handle
+chinese_name: 胡俊杰
+facebook_username: JunjieHuu
+github_username: JunjieHu # your GitHub user name
+twitter_username: JunjieHu12  
 linkedin_username: junjie-hu-24b48b83 # your LinkedIn user name
 scholar_userid: j-42gHYAAAAJ # your Google Scholar ID
 orcid_id: # your ORCID ID
@@ -50,6 +48,7 @@ quora_username: # your Quora username
 publons_id: # your ID on Publons
 research_gate_profile: # your profile on ResearchGate
 blogger_url: # your blogger URL
+
 
 contact_note: >
   You can even add a little note about which of these is the best way to reach you.
@@ -84,6 +83,9 @@ collections:
   projects:
     output: false
     permalink: /projects/:path/
+  publications:
+    output: false
+    permalink: /pages/
 
 news_limit: 5
 
@@ -124,7 +126,7 @@ plugins:
 
 scholar:
 
-  last_name: Einstein
+  last_name: Hu
 
   style: apa
   locale: en
@@ -155,6 +157,7 @@ enable_mansory:           true
 enable_progressbar:       true
 enable_tooltips:          false
 show_social_icons:        false
+single_page:              true
 
 # -----------------------------------------------------------------------------
 # Library versions
