--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ description: > # this means to ignore newlines until "url:"
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 
-url:  # the base hostname & protocol for your site
-baseurl: #/al-folio # the subpath of your site, e.g. /blog/
+url: www.cs.cmu.edu/  # the base hostname & protocol for your site
+baseurl: /~junjieh #/al-folio # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 
 # -----------------------------------------------------------------------------
