--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 title: >
     Junjie Hu
 email: >
-    junjieh@cs.cmu.edu
+    jhu@cs.wisc.edu
 description: > # this means to ignore newlines until "url:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: > # with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
